2017-05-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.7-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha05 final changes';git push
	git tag -a 4.6.7-alpha05 -m 'ncremap with sub-gridscale data (-P sgs) works';git push --tags

2017-05-08  Charlie Zender  <zender@uci.edu>

	* Improve verbosity for debugging and generalize names away from ALM/CLM to SGS for "sub-gridcell", and also "fractional area"

	* Allow ncremap to infer source grid when regridding "fractional area" files (not working yet)

2017-05-07  Charlie Zender  <zender@uci.edu>

	* Prevent ncclimo from inadavertently incorrectly regridding ALM/CLM files

	* ncremap move ALM files from homedir to intermediate location

	* Add "none" as synonym for unchunk policy

2017-05-05  Charlie Zender  <zender@uci.edu>

	* Delete missing values with ncap2, eliminate corresponding ncatted step for almu in ncremap

2017-05-04  Charlie Zender  <zender@uci.edu>

	* Revert and allow landmask to be regridded since errors less than not having it at all:
	T42 CLM with almu has global-mean errors of ~0.005 W/m2 and ~0.01 K (why not better? float landfrac may propagate errors)
	T42 CLM without almu but with almu landmask has global-mean errors of ~2 W/m2 and ~2 K
	T42 CLM without almu and with straight regridder land mask has global-mean errors of ~1.5 W/m2 and ~0 K

2017-05-03  Charlie Zender  <zender@uci.edu>

	* Add landmask to regridder exclusion list to keep ALM/CLM sane (users can re-derive it from landfrac)

	* Re-formulate mask conversion in nco_grd_nfr() so output mask is 1 wherever input mask is non-zero and non-missing, and is otherwise 0

2017-05-02  Charlie Zender  <zender@uci.edu>

	* Add ALM/CLM unstructured grid ("almu") stubs to ncremap

	* NCO 4.6.7-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha04 final changes';git push
	git tag -a 4.6.7-alpha04 -m 'Version 4.6.7-alpha04 new features: MTA flags, ncap2 in-fill, MSVC';git push --tags
